# Public-key-cryptography

./: .gitignore  320; AMOUNT 10; SIZE 32.txt  320; AMOUNT 16; SIZE 20.txt  Makefile  README.md  README.txt  createMessage.c  defines.h  getEncodedMessage.c  getPublicKey.c  main.c  modularArithmetic.c  output.txt  receiver1  returnEncodedMessage.c  Время. Размер 10.txt  Время. Размер 16.txt
channel/: message.txt  public_key
public_key_Old/: 320; AMOUNT 20; SIZE 16.txt  Makefile  README.md  README.txt  defines.h  Время. Размер 10.txt
public_key_Test/: 320; AMOUNT 10; SIZE 32.txt  320; AMOUNT 16; SIZE 20.txt  320; AMOUNT 20; SIZE 16.txt  320; AMOUNT 8; SIZE 40.txt  EGOR_SHARIT_A_TOLYA_NE_SHARIT.txt  Makefile  README.md  README.txt  Receiver  Transmitter  defines.h  modules35.txt  output.txt  receiver1  receiver2  transmitter1  transmitter2  Время. Размер 10.txt  Время. Размер 16.txt  Время. Размер 3.txt
public_key_Test/receiver/: CMakeLists.txt  bitsOperations.c  computePublicKey.c  decoding.c  generateSecretKey.c  getEncodedMessage.c  main.c  modularArithmetic.c  modules35.txt  myTime.c  myTime.h  polynomialDeg.c  prints.c  receiver.h  returnPublicKey.c  transmitterConnection.c  utilities.c
public_key_Test/transmitter/: CMakeLists.txt  bitsOperations.c  coding.c  createMessage.c  getPublicKey.c  longArithmetic.c  main.c  modularArithmetic.c  moduleCoding.c  myTime.c  returnEncodedMessage.c  transmitter.h  utilities.c
public_key_Test_Backup/: EGOR_SHARIT_A_TOLYA_NE_SHARIT.txt  Makefile  defines.h  output.txt
receiver/: Makefile  computePublicKey.c  decoding.c  (+9 more)
(+45 files in other folders)
